# Algoritmi-C

./: README.md
AlberiN_ari/: CMakeLists.txt  algorithms_nTree.c  binaryTree.c  n_tree.h  readMe.txt  test.c  test_file_csv.c  test_nTree.c
Graph/: CMakeLists.txt  Dijkstra.c  Graph.c  Graph.h  Kruskal.c  Strongly_CC.c  test.c  test_on_graph.c
maxHeap/: CMakeLists.txt  max_heap.c  max_heap.h  test.c  test_heap.c
sorting/: CMakeLists.txt  README.MD
sorting/HeapSort/: HeapSort.c  HeapSort.h  Heap_sort_test.c  Test.c  test_struttura_csv.c
sorting/InsertionSort/: Insertion_sort.c  Insertion_sort.h  Insertion_sort_test.c  test_file_csv.c
sorting/MergeSort/: MergeSort.c  MergeSort.h  Merge_sort_test.c  test.c  test_struttura_csv.c
sorting/QuickSort/: QuickSort.c  Quick_sort.h  test.c  test_quick_sort.c  test_struttura_csv.c
sorting/SelectionSort/: SelectionSort.c  SelectionSort.h  test_file_csv.c  test_selection_sort.c
union_find/: CMakeLists.txt  test.c  test_on_union.c  union_find.c  union_find.h
